--- a/FragsAffectGates/FragsAffectGates.csproj
+++ b/FragsAffectGates/FragsAffectGates.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="FragsAffectGates.cs" />
     <Compile Include="Handlers\Map.cs" />
+    <Compile Include="Handlers\Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
